plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'java'
    id 'checkstyle'
    id 'jacoco'
    id 'com.gradleup.shadow' version '9.1.0'
}

group = 'evidencelogger'
version = '0.1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

javafx {
    version = '25.0.2'
    modules = ['javafx.controls']
}

application {
    mainClass = 'evidencelogger.app.EvidenceLoggerLauncher'
    applicationDefaultJvmArgs = ['--enable-native-access=javafx.graphics']
}

checkstyle {
    toolVersion = '11.0.0'
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
    jvmArgs += ['-ea']
}

task coverage(type: JacocoReport) {
    dependsOn test
    sourceDirectories.from files(sourceSets.main.allSource.srcDirs)
    classDirectories.from files(sourceSets.main.output)
    executionData.from files(jacocoTestReport.executionData)
    afterEvaluate {
        classDirectories.from files(classDirectories.files.collect {
            fileTree(dir: it, exclude: ['**/*.jar'])
        })
    }
    reports {
        html.required = true
        xml.required = true
    }
}

shadowJar {
    archiveFileName = 'EvidenceLogger.jar'
}

defaultTasks 'clean', 'test'

dependencies {
    String javaFxVersion = '25.0.2'

    implementation("org.openjfx:javafx-base:${javaFxVersion}:win")
    implementation("org.openjfx:javafx-base:${javaFxVersion}:mac")
    implementation("org.openjfx:javafx-base:${javaFxVersion}:linux")
    implementation("org.openjfx:javafx-controls:${javaFxVersion}:win")
    implementation("org.openjfx:javafx-controls:${javaFxVersion}:mac")
    implementation("org.openjfx:javafx-controls:${javaFxVersion}:linux")
    implementation("org.openjfx:javafx-fxml:${javaFxVersion}:win")
    implementation("org.openjfx:javafx-fxml:${javaFxVersion}:mac")
    implementation("org.openjfx:javafx-fxml:${javaFxVersion}:linux")
    implementation("org.openjfx:javafx-graphics:${javaFxVersion}:win")
    implementation("org.openjfx:javafx-graphics:${javaFxVersion}:mac")
    implementation("org.openjfx:javafx-graphics:${javaFxVersion}:linux")

    implementation 'org.xerial:sqlite-jdbc:3.53.0.0'

    testImplementation 'org.junit.jupiter:junit-jupiter:6.0.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:6.0.0'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs.addAll(['-Xlint:all', '-Werror'])
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
    testLogging {
        events 'failed', 'skipped'
    }
}
